# path_decomposition_trie

./: CMakeLists.txt  README.md  balanced_parentheses_vector.cpp  balanced_parentheses_vector.h  bit_strings.h  bit_util.h  bit_vector.h  compacted_trie_builder.h  default_tree_builder.h  library.cpp  library.h  mappable_vector.h  path_decomposed_trie.h  rank_select_bit_vector.h  test_bit_vector.cpp  test_bp_vector.cpp  test_bp_vector_encode_decode.cpp  test_path_decomposed_trie.cpp  test_pdt_search.cpp  test_varint_encode.cpp  varint_encode.h
